# pokemon

./: .gitignore  CMakeLists.txt  Components.h  Entity.h  GameState.h  Initialize.h  TODO.txt  const.h  main.cpp
Battle/: Battle.h  BattleComponents.h
Catching/: CatchingComponents.h  CatchingSystem.h
Chests/: ChestComponents.h  ChestSystem.h
Components/: BaseEntityComponents.h  Components.h
Damage/: DamageComponents.h
Game/: GameComponents.h  GameSystem.h
Health/: Health.h  HealthComponents.h
Inventory/: InventoryComponents.h  InventorySystem.h
Location/: LocationType.h
Menu/: MenuComponents.h  MenuSystem.h
Onboarding/: OnboardingComponents.h  OnboardingSystem.h
Pause/: PauseComponents.h  PauseSystem.h
Player/: PlayerComponents.h  PlayerMovementSystem.h
Pokemon/: PokemonComponents.h  PokemonSystem.h
Quests/: Quests.h  QuestsComponents.h
Shop/: ShopComponents.h  ShopEntities.h  ShopSystem.h
TheEnd/: TheEnd.h  TheEndComponents.h
Time/: TimeSystem.h
Trainer/: Trainer.h  TrainerComponents.h
res/collisionMap/: town.txt
systems/: BattleSystem.h  ClickHandler.h  CollisionMap.h  CollisionSystem.h  Controller.h  EntityManager.h  InputSystem.h  KeyboardSystem.h  RenderSystem.h  StateManager.h  WindowManager.h
